<resources>
    <string name="app_name">Life Scheduler</string>

    <string name="title_activity_main">Schedule</string>
    <string name="title_activity_register">Register</string>
    <string name="title_activity_goal_tasks">Goal Tasks</string>
    <string name="title_activity_top_goals">Top Goals</string>
    <string name="title_activity_create_goal">Create New Goal</string>
    <string name="title_activity_create_task">Create New Task</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="register">Register</string>
    <string name="email_address">Email Address</string>
    <string name="last_name">Last Name</string>
    <string name="first_name">First Name</string>
    <string name="password">Password</string>
    <string name="username">Username</string>
    <string name="log_in">Log In</string>
    <string name="life_scheduler_logo">Life Scheduler Logo</string>
    <string name="action_schedule">Schedule</string>
    <string name="action_top_goals">Top Goals</string>
    <string name="action_log_out">Log Out</string>
    <string name="title">Title</string>
    <string name="description">Description</string>
    <string name="defaultLocation">Default Location</string>
    <string name="default_priority">Default Priority</string>
    <string name="location">Location</string>
    <string name="priority">Priority</string>
    <string name="placeholder_goal_title">Goal Title</string>
    <string name="tasks">Tasks</string>
    <string name="sub_goals">Sub Goals</string>
    <string name="action_add_goal">Add Goal</string>
    <string name="action_add_task">Add Task</string>
    <string name="estimated_required_time_m">Estimated Required Time (m)</string>

</resources>
